xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__expr_pattern.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
expression: "pattern::Pattern::parse(\"$a | $b\", &namespaces, &variable_names)"
---
Ok(Expr(BinaryExpr(BinaryExpr(
  operator: Union,
  left: Path(PathExpr(
    root: Rooted(
      root: VarRef(Name(
        name: "a",
        prefix: None,
        namespace: None,
      )),
      predicates: [],
    ),
    steps: [],
  )),
  right: Path(PathExpr(
    root: Rooted(
      root: VarRef(Name(
        name: "b",
        prefix: None,
        namespace: None,
      )),
      predicates: [],
    ),
    steps: [],
  )),
))))
