xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__expr_pattern_absolute_double_slash.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
expression: "pattern::Pattern::parse(\"//foo\", &namespaces, &variable_names)"
---
Ok(Expr(Path(PathExpr(
  root: AbsoluteDoubleSlash,
  steps: [
    AxisStep(AxisStep(
      forward: Child,
      node_test: NameTest(Name(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      ))),
      predicates: [],
    )),
  ],
))))
