xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__expr_pattern_rooted_path.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
expression: "pattern::Pattern::parse(\"$a/foo\", &namespaces, &variable_names)"
---
Ok(Expr(Path(PathExpr(
  root: Rooted(
    root: VarRef(Name(
      name: "a",
      prefix: None,
      namespace: None,
    )),
    predicates: [],
  ),
  steps: [
    AxisStep(AxisStep(
      forward: Child,
      node_test: NameTest(Name(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      ))),
      predicates: [],
    )),
  ],
))))
