xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__postfix_expr.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
expression: "pattern::Pattern::parse(\"foo[1]\", &namespaces, &variable_names)"
---
Ok(Expr(Path(PathExpr(
  root: Relative,
  steps: [
    AxisStep(AxisStep(
      forward: Child,
      node_test: NameTest(Name(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      ))),
      predicates: [
        Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                1,
              ])))),
            ],
          )),
        ]),
      ],
    )),
  ],
))))
