xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__predicate_pattern_no_predicates.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
expression: "pattern::Pattern::parse(\".\", &namespaces, &variable_names)"
---
Ok(PredicatePattern(PredicatePattern(
  predicates: [],
)))
