xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__predicate_pattern_single_predicate.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
expression: "pattern::Pattern::parse(\".[1]\", &namespaces, &variable_names)"
---
Ok(PredicatePattern(PredicatePattern(
  predicates: [
    Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(Literal(Integer((Positive, [
            1,
          ])))),
        ],
      )),
    ]),
  ],
)))
