xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__root_intersect_with_other_path.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
expression: "pattern::Pattern::parse(\"(/) intersect foo\", &namespaces, &variable_names)"
---
Ok(Expr(BinaryExpr(BinaryExpr(
  operator: Intersect,
  left: Path(PathExpr(
    root: AbsoluteSlash,
    steps: [],
  )),
  right: Path(PathExpr(
    root: Relative,
    steps: [
      AxisStep(AxisStep(
        forward: Child,
        node_test: NameTest(Name(Name(
          name: "foo",
          prefix: None,
          namespace: None,
        ))),
        predicates: [],
      )),
    ],
  )),
))))
